// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages can display no page at all 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-Pages) components={{...}}>
      <inject-Pages components={{...}} classes={{...}}>
        <Pages components={{...}} classes={{...}} app={{...}} page="Foo" loading={false} uri="/" router={{...}} history={{...}} loadMasks={{...}}>
          <div className="RSFPages-root-1">
            <WithStyles(LoadMask) show={false} fullscreen={true}>
              <LoadMask show={false} fullscreen={true} classes={{...}}>
                <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-fullscreen-4">
                  <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                    <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                      <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
                        <svg className="MuiCircularProgress-svg-11" viewBox="22 22 44 44">
                          <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                        </svg>
                      </div>
                    </CircularProgress>
                  </WithStyles(CircularProgress)>
                </div>
              </LoadMask>
            </WithStyles(LoadMask)>
          </div>
        </Pages>
      </inject-Pages>
    </WithStyles(inject-Pages)>
  </Provider>
</TestProvider>
`;

exports[`Pages displays a custom default loading component 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-Pages) loading={[Function: loading]} components={{...}}>
      <inject-Pages loading={[Function: loading]} components={{...}} classes={{...}}>
        <Pages loading={true} components={{...}} classes={{...}} app={{...}} page="Product" uri="/" router={{...}} history={{...}} loadMasks={{...}}>
          <div className="RSFPages-root-1">
            <WithStyles(LoadMask) show={true} fullscreen={true}>
              <LoadMask show={true} fullscreen={true} classes={{...}}>
                <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-show-5 RSFLoadMask-fullscreen-4">
                  <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                    <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                      <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
                        <svg className="MuiCircularProgress-svg-11" viewBox="22 22 44 44">
                          <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                        </svg>
                      </div>
                    </CircularProgress>
                  </WithStyles(CircularProgress)>
                </div>
              </LoadMask>
            </WithStyles(LoadMask)>
            <div data-page="Product" style={{...}}>
              <Product onBefore={[Function]} onAfter={[Function]}>
                <div>
                  Product
                </div>
              </Product>
            </div>
          </div>
        </Pages>
      </inject-Pages>
    </WithStyles(inject-Pages)>
  </Provider>
</TestProvider>
`;

exports[`Pages displays the correct page 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-Pages) components={{...}}>
      <inject-Pages components={{...}} classes={{...}}>
        <Pages components={{...}} classes={{...}} app={{...}} page="Category" loading={false} uri="/" router={{...}} history={{...}} loadMasks={{...}}>
          <div className="RSFPages-root-1">
            <WithStyles(LoadMask) show={false} fullscreen={true}>
              <LoadMask show={false} fullscreen={true} classes={{...}}>
                <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-fullscreen-4">
                  <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                    <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                      <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
                        <svg className="MuiCircularProgress-svg-11" viewBox="22 22 44 44">
                          <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                        </svg>
                      </div>
                    </CircularProgress>
                  </WithStyles(CircularProgress)>
                </div>
              </LoadMask>
            </WithStyles(LoadMask)>
            <div data-page="Category" style={{...}}>
              <Category onBefore={[Function]} onAfter={[Function]}>
                <div>
                  Category
                </div>
              </Category>
            </div>
          </div>
        </Pages>
      </inject-Pages>
    </WithStyles(inject-Pages)>
  </Provider>
</TestProvider>
`;

exports[`Pages displays the default loading component 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-Pages) components={{...}}>
      <inject-Pages components={{...}} classes={{...}}>
        <Pages components={{...}} classes={{...}} app={{...}} page="Product" loading={true} uri="/" router={{...}} history={{...}} loadMasks={{...}}>
          <div className="RSFPages-root-1">
            <WithStyles(LoadMask) show={true} fullscreen={true}>
              <LoadMask show={true} fullscreen={true} classes={{...}}>
                <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-show-5 RSFLoadMask-fullscreen-4">
                  <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                    <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                      <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
                        <svg className="MuiCircularProgress-svg-11" viewBox="22 22 44 44">
                          <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                        </svg>
                      </div>
                    </CircularProgress>
                  </WithStyles(CircularProgress)>
                </div>
              </LoadMask>
            </WithStyles(LoadMask)>
            <div data-page="Product" style={{...}}>
              <Product onBefore={[Function]} onAfter={[Function]}>
                <div>
                  Product
                </div>
              </Product>
            </div>
          </div>
        </Pages>
      </inject-Pages>
    </WithStyles(inject-Pages)>
  </Provider>
</TestProvider>
`;
